--- a/Project.toml
+++ b/Project.toml
@@ -9,12 +9,13 @@ FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
 [compat]
-FFTW = "1"
 DocStringExtensions = "0.9"
+FFTW = "1"
 julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 
 [targets]
-test = ["Test"]
+test = ["Test","MAT"]
