--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.2.0"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+SemiLagrangian = "abe12ce6-d865-11e8-314f-3f926d5bd47d"
 
 [compat]
 DocStringExtensions = "0.9"
@@ -14,8 +15,8 @@ FFTW = "1"
 julia = "1"
 
 [extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test","MAT"]
+test = ["Test", "MAT"]
