CompatHelper: add new compat entry for SemiLagrangian at version 0.1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ SemiLagrangian = "abe12ce6-d865-11e8-314f-3f926d5bd47d"
 [compat]
 DocStringExtensions = "0.9"
 FFTW = "1"
+SemiLagrangian = "0.1"
 julia = "1"
 
 [extras]
